--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,58 @@ body {
     font-size: 1.6rem;
     overflow: hidden;
     background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
 }
 
 #file-input {
     position: absolute;
     top: 10%;
-    left: 10%;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     z-index: 999999;
+    padding: 1rem;
+    border-radius: 5px;
+    width: 300px;
+    color: #aaa;
+}
+
+.input-button {
+    border: none;
+    margin-top: 1rem;
+    display: block;
+    background-color: #aaa;
+    color: black;
+    padding: 6px 12px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 5px;
+}
+
+#stop-button {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    border: none;
+    display: block;
+    background-color: transparent;
+    color: #777;
+    padding: 6px 12px;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 5px;
+    z-index: 999999;
+    display: none;
+    font-weight: bold;
+}
+
+input[type="file"] {
+    display: none;
 }
 
 .dancefloor {
@@ -90,6 +135,7 @@ body {
     margin-right: auto;
     bottom: 260px;
     text-align: center;
+    font-size: 1.6rem;
 }
 
 .speaker {
@@ -162,6 +208,7 @@ body {
     position: absolute;
     bottom: 0;
     z-index: 10;
+    font-size: 1.6rem;
 }
 
 .overhead-light {
